test: equalsとtostringでカバレッジ計測時に無視できるようなテストを追加(テストを目的としていない)